Updates Admin panel and Css changes
Updates Admin panel and Css changes

--- a/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
@@ -82,6 +82,7 @@
         .CartBtn {
             width: 140px;
             height: 40px;
+            text-align:center;
             border-radius: 12px;
             border: none;
             background-color: rgb(255, 208, 0);
@@ -93,10 +94,11 @@
             overflow: hidden;
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.103);
             position: relative;
+            
         }
 
             .CartBtn.active {
-                background-color: rgb(0, 128, 0); /* Green color */
+                background-color: rgb(0, 128, 0); 
                 border-color: rgb(0, 128, 0);
                 color: white;
             }
@@ -131,6 +133,7 @@
             transition-duration: .5s;
             font-size: 1.04em;
             font-weight: 600;
+
         }
 
         .CartBtn:hover .IconContainer {
@@ -147,6 +150,29 @@
         .CartBtn:active {
             transform: scale(0.95);
             transition-duration: .5s;
+        }
+
+        .service-item-cart {
+            width: 350px;  
+            height: auto;  
+            overflow: hidden; 
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; 
+             }
+            .image-card img {
+                height: 150px; 
+                width: auto; 
+            }
+
+        .service-item-cart {
+            width: 350px;
+            height: auto;
+        }
+
+        .paddings{
+            margin-top:-20px;
+            margin-bottom:25px;
         }
     </style>
 </head>
@@ -187,7 +213,7 @@
                             @foreach(var item in Model.variated_items)
                             {
                             <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
-                                <div class="service-item rounded pt-1">
+                                <div class="service-item service-item-cart rounded pt-1">
                                     <div class="p-3">
                                         <div class="image-card">
                                             <img src="~/images/@item.Image" />
@@ -231,7 +257,7 @@
                                                                 <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
                                                             </svg>
                                                         </span>
-                                                        <p class="text mb-0">Add to Cart</p>
+                                                        <p class="text">Add to Cart</p>    
                                                     </button>
                                                 </div>
                                             </div>
@@ -247,7 +273,7 @@
                         @foreach (var item in Model.Items)
                         {
                             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="service-item rounded pt-3">
+                                <div class="service-item service-item-cart2 rounded pt-3">
                                     <div class="p-4">
                                         <div class="image-card">
                                             <img src="~/images/@item.Image" />
@@ -259,7 +285,7 @@
                                         <div class="row">
                                             <div class="col-md-4">
                                             </div>
-                                            <div class="col-md-8 d-flex justify-content-center align-items-center">
+                                            <div class="col-md-8 d-flex paddings justify-content-center align-items-center">
                                                 <button class="CartBtn">
                                                     <span class="IconContainer">
                                                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)" class="cart">
