--- a/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
@@ -32,6 +32,27 @@
             padding:20px;
             
         }
+
+        .table-responsive {
+            max-height: 70vh;
+            overflow-x: auto;
+            max-width: 100%;
+            overflow-y: auto;
+        }
+
+        .Add-button {
+            margin:5px;
+            padding:8px;
+            background-color: #0B5ED7;
+            border-radius:10px;
+            color:white;
+            text-decoration:none;
+        }
+
+        .Add-button:hover{
+            color: white;
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -39,40 +60,42 @@
     <div class="container">
        <div class="d-flex justify-content-between">
             <h2 class="text-left">Items Detail</h2>    
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="btn btn-primary">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
        </div>
-
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th>Image</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model.items)
-                {
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
                     <tr>
-                        <td>@item.Title</td>
-                        <td>@item.Description</td>
-                        <td>@item.Price</td>
-                        <td>
-                        
-                        <img src="~/images/@item.Image" alt="@item.Image" >
-                        </td>
-                        <td id="fix">
-                            <a asp-page="/Issues/NonVariatedItems/UpdateItem" asp-route-id="@item.Id" class="btn btn-md btn-primary mr-2"><i class="fas fa-edit"></i></a>
-                            <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
-                                <button type="submit" class="btn btn-md btn-danger"><i class="fas fa-trash"></i></button>
-                            </form>
-                        </td>
+                        <th>Title</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Image</th>
+                        <th>Action</th>
                     </tr>
-                }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.items)
+                    {
+                        <tr>
+                            <td>@item.Title</td>
+                            <td>@item.Description</td>
+                            <td>@item.Price</td>
+                            <td>
+
+                                <img src="~/images/@item.Image" alt="@item.Image">
+                            </td>
+                            <td id="fix">
+                                <a asp-page="/Issues/NonVariatedItems/UpdateItem" asp-route-id="@item.Id" class="btn btn-md btn-primary mr-2"><i class="fas fa-edit"></i></a>
+                                <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
+                                    <button type="submit" class="btn btn-md btn-danger"><i class="fas fa-trash"></i></button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+      
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
