--- a/BBWebProject/BBWebProject/Pages/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Index.cshtml
@@ -606,6 +606,8 @@
     <script src="~/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <!-- Template Javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+
     <script src="~/js/main.js"></script>
     <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' async defer></script>
 </body>
