Update css of pages
Update the counter to work , Change image of the Login page to logo , card alignment set ,change the text of the add items button in admin panel in every index page and others

--- a/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
@@ -233,8 +233,8 @@
                 width: auto; 
             }
 
-        .service-item-cart {
-            width: 350px;
+        .service-item-cart2 {
+            width: 270px;
             height: auto;
         }
 
