--- a/BBWebProject/BBWebProject/Pages/Issues/Profiles/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Profiles/Index.cshtml
@@ -56,7 +56,7 @@
     <div class="container">
         <div class="d-flex justify-content-between">
             <h2 class="text-left">Profile Detail</h2>
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Profile</a>
         </div>
         <div class="table-responsive">
             <table class="table table-hover">
