--- a/BBWebProject/BBWebProject/Pages/Issues/Categories/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Categories/Index.cshtml
@@ -31,7 +31,7 @@
         }
 
         .table-responsive {
-            max-height: 90vh;
+            max-height: 70vh;
             overflow-x: auto;
             max-width: 100%;
             overflow-y: auto;
@@ -58,7 +58,7 @@
       
         <div class="d-flex justify-content-between">
             <h2 class="text-left">Category Details</h2>
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Category</a>
         </div>
         <div class="table-responsive">
             <table class="table table-hover">
