--- a/BBWebProject/BBWebProject/Pages/Issues/Chiefs/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Chiefs/Index.cshtml
@@ -60,7 +60,7 @@
            
         <div class="d-flex justify-content-between">
             <h2 class="text-left">Chiefs Detail</h2>
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Chiefs</a>
         </div>
             <div class="table-responsive">
                 <table class="table table-hover">
