--- a/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
@@ -60,7 +60,7 @@
     <div class="container">
        <div class="d-flex justify-content-between">
             <h2 class="text-left">Items Detail</h2>    
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Detail</a>
        </div>
         <div class="table-responsive">
             <table class="table table-hover">
