--- a/BBWebProject/BBWebProject/Pages/Issues/Testimonials/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Testimonials/Index.cshtml
@@ -60,7 +60,7 @@
        
         <div class="d-flex justify-content-between">
             <h2 class="text-left">Testimonials Detail</h2>
-            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Testimonials</a>
         </div>
         <div class="table-responsive">
             <table class="table table-hover">
