--- a/BBWebProject/BBWebProject/Pages/Issues/VariatedItems/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/VariatedItems/Index.cshtml
@@ -59,7 +59,7 @@
        
          <div class="d-flex justify-content-between">
             <h2 class="text-left">Variated Items Detail</h2>
-      <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Item</a>
+            <a asp-page="/Issues/NonVariatedItems/AddItem" class="Add-button">Add Variated_Items</a>
  </div>
         <div class="table-responsive">
             <table class="table table-hover">
