--- a/BBWebProject/BBWebProject/Pages/Issues/Login.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Login.cshtml
@@ -92,6 +92,8 @@
 
     </div>
 
+    @* I have made some changes in login page *@
+
     <!-- Bootstrap core JavaScript-->
     <script src="~/issues/vendor/jquery/jquery.min.js"></script>
     <script src="~/issues/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
